Serializer tests were fixed.